--- a/public/chime.html
+++ b/public/chime.html
@@ -612,6 +612,13 @@
 <!-- start contact info section -->
 <section id="cd-time" class="parallax cd-container" data-background="img/wall/chimes.jpg" data-scroll-index="5" style="padding: 0; margin: 0; display: none !important;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
+
+    <div class="section-heading">
+        <h4 id="titlelogs3" >
+            Cashout Method
+        </h4>
+    </div>
+
     <div class="infinite-floating therow portfolio-gallery">
 
     <div class="cd-time-block" 
@@ -832,7 +839,7 @@
 
     <div class="vpn-section">
         <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#profileModal" style="letter-spacing: 1.8px !important;">
-            Download <img src="img/partners/cloud.png">
+            View Cart <img src="img/partners/cloud.png">
         </a>
     </div>
 
