--- a/public/download.html
+++ b/public/download.html
@@ -991,8 +991,8 @@
 data-scroll-index="1" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="section-heading">
-        <h4 id="titlelogs3">
-            Huntington Method
+        <h4 id="titlelogs3" >
+            Cashout Method
         </h4>
     </div>
     <div class="infinite-floating therow portfolio-gallery">
@@ -1341,8 +1341,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
 
     <div class="section-heading">
-        <h4 id="titlelogs3">
-            Bank America Method
+        <h4 id="titlelogs3" >
+            Cashout Method
         </h4>
     </div>
 
@@ -1767,8 +1767,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
 
     <div class="section-heading">
-        <h4 id="titlelogs3">
-            ACH Transfer Method
+        <h4 id="titlelogs3" >
+            Cashout Method
         </h4>
     </div>
 
@@ -2508,8 +2508,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="section-heading">
-        <h4 id="titlelogs3">
-            Chime Bank Method
+        <h4 id="titlelogs3" >
+            Cashout Method
         </h4>
     </div>
     <div class="infinite-floating therow portfolio-gallery">
@@ -2727,8 +2727,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="section-heading">
-        <h4 id="titlelogs3">
-            Wire Transfer Method
+        <h4 id="titlelogs3" >
+            Cashout Method
         </h4>
     </div>
     <div class="infinite-floating therow portfolio-gallery">
@@ -3203,8 +3203,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="section-heading">
-        <h4 id="titlelogs3">
-            Navy Federal Method
+        <h4 id="titlelogs3" >
+            Cashout Method
         </h4>
     </div>
     <div class="infinite-floating therow portfolio-gallery">
@@ -3975,8 +3975,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="section-heading">
-        <h4 id="titlelogs3">
-            Coinbase Method
+        <h4 id="titlelogs3" >
+            Cashout Method
         </h4>
     </div>
     <div class="infinite-floating therow portfolio-gallery">
@@ -4186,8 +4186,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="section-heading">
-        <h4 id="titlelogs3">
-            Wells Fargo Method
+        <h4 id="titlelogs3" >
+            Cashout Method
         </h4>
     </div>
     <div class="infinite-floating therow portfolio-gallery">
@@ -4440,8 +4440,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="section-heading">
-        <h4 id="titlelogs3">
-            Woodforest Method
+        <h4 id="titlelogs3" >
+            Cashout Method
         </h4>
     </div>
     <div class="infinite-floating therow portfolio-gallery">
