--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -498,6 +498,11 @@
 
 <section id="cd-time" class="parallax cd-container" data-background="img/wall/bankofamerica.jpg" data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
+    <div class="section-heading">
+        <h4 id="titlelogs3" >
+            Cashout Method
+        </h4>
+    </div>
     <div class="infinite-floating therow portfolio-gallery">
 
     <div class="cd-time-block" data-src="img/comp7/boa.jpg" data-sub-html="<h4 class='wh'>Intro</h4>
@@ -912,7 +917,7 @@
 
     <div class="vpn-section">
         <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#profileModal" style="letter-spacing: 1.8px !important;">
-            Download <img src="img/partners/cloud.png">
+            View Cart <img src="img/partners/cloud.png">
         </a>
     </div>
 
