--- a/public/chase.html
+++ b/public/chase.html
@@ -541,6 +541,11 @@
 <!-- start contact info section -->
 <section id="cd-time" class="parallax cd-container" data-background="img/content/bg.jpg" data-scroll-index="5" style="padding: 0; margin: 0;  display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
+    <div class="section-heading">
+        <h4 id="titlelogs3" >
+            Cashout Method
+        </h4>
+    </div>
     <div class="infinite-floating therow portfolio-gallery">
 
 
@@ -1267,7 +1272,7 @@
 
     <div class="vpn-section">
         <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#profileModal" style="letter-spacing: 1.8px !important;">
-            Download <img src="img/partners/cloud.png">
+            View Cart <img src="img/partners/cloud.png">
         </a>
     </div>
 
