--- a/public/huntington.html
+++ b/public/huntington.html
@@ -502,6 +502,13 @@
 <!-- start contact info section -->
 <section id="cd-time" class="parallax cd-container" data-background="img/wall/huntington.jpg" data-scroll-index="5" style="padding: 0; margin: 0;  display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
+
+    <div class="section-heading">
+        <h4 id="titlelogs3" >
+            Cashout Method
+        </h4>
+    </div>
+    
     <div class="infinite-floating therow portfolio-gallery">
 
     <div class="cd-time-block" data-src="img/partners/tutorial.png" data-sub-html=" <h4 class='wh'>Intro</h4>
@@ -846,7 +853,7 @@
 
     <div class="vpn-section">
         <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#profileModal" style="letter-spacing: 1.8px !important;">
-            Download <img src="img/partners/cloud.png">
+            View Cart <img src="img/partners/cloud.png">
         </a>
     </div>
 
