--- a/public/navyfederal.html
+++ b/public/navyfederal.html
@@ -1241,8 +1241,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#profileModal" style="letter-spacing: 1.8px !important;">
-            View Cart <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" style="letter-spacing: 1.8px !important;">
+            View Cart  <img src="img/partners/cloud.png">
         </a>
     </div>
 
