--- a/public/deposit.html
+++ b/public/deposit.html
@@ -449,9 +449,9 @@
     </div>
 
 
-    <div class="vpn-section" style="margin-top: -50px !important;">
-        <a class="butn" id="vpn" href="download" style="letter-spacing: 1.7px !important;">
-            Download <img src="img/partners/cloud.png">
+    <div class="vpn-section">
+        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#saveModal">
+            Login Now <img src="img/partners/user.png">
         </a>
     </div>
 
