--- a/public/download.html
+++ b/public/download.html
@@ -5002,21 +5002,18 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
                     
                 </p> <hr class="thehr">
 
+                <div class="form-group col-md-12">
+                    <div id="save-life">
+                        <img id="save-flag7" />
+                        <input type="text" class="form-control" id="saveLife" autofocus readonly required>
+                    </div> 
+                </div> <hr class="thehr">
 
-                <form  id="the-form">
-                    <div class="form-group col-md-12" id="form">
-                        <div id="the-life">
-                            <img id="the-flag7" />
-                            <input type="text" class="form-control" id="inputLife" autofocus readonly required>
-                        </div> <div id="recaptcha-container"></div>
-                    </div> <hr class="thehr" id="hr">
-
-                    <li class="next">
-                        <a class="butn modal-btn" id="anon-check" style="letter-spacing: 1.7px !important;">
-                            Download <img src="img/partners/cloud.png">
-                        </a>
-                    </li>
-                </form>
+                <li class="next">
+                    <a class="butn modal-btn" id="anon-check" style="letter-spacing: 1.7px !important;">
+                        Download <img src="img/partners/cloud.png">
+                    </a>
+                </li>
           
             </div>
         </div>
