--- a/public/chime.html
+++ b/public/chime.html
@@ -1103,7 +1103,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.main.js"></script>
     <script src="js/main/main.js"></script>
-    <script src="js/auth/auth.js"></script>
+    <script src="js/fire/auth.js"></script>
     <script src="datatables/js/jquery.datatable2.min.js"></script>
     <script src="js/cart/gle.js"></script>
     <script src="js/rev_slider/jquery.themepunch.revolution.min.js"></script>
