--- a/public/deposit.html
+++ b/public/deposit.html
@@ -665,7 +665,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.6/platform.min.js"></script>
     <script src="js/main/core.deposit.js"></script>
     <script src="js/main/deposit.js"></script>
-    <script src="js/auth/deposit.js"></script>
+    <script src="js/fire/deposit.js"></script>
     <script src="js/cart/deposit.js"></script>
     <script src="js/pages/timer.js"></script>
 
