--- a/public/download.html
+++ b/public/download.html
@@ -5120,7 +5120,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.6/platform.min.js"></script>
     <script src="js/main/core.download.js"></script>
     <script src="js/main/download.js"></script>
-    <script src="js/auth/download.js"></script>
+    <script src="js/fire/download.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/download.js"></script>
     <script src="js/pages/clock.js"></script>
