--- a/public/download.html
+++ b/public/download.html
@@ -4851,7 +4851,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 
     <div class="vpn-section">
         <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#saveModal">
-            Login Now <img src="img/partners/user.png">
+            Login Now <img src="img/partners/google.png">
         </a>
     </div>
 
