--- a/public/truist.html
+++ b/public/truist.html
@@ -1225,7 +1225,7 @@
 
     <div class="vpn-section">
         <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#saveModal">
-            Login Now <img src="img/partners/user.png">
+            Login Now <img src="img/partners/google.png">
         </a>
     </div>
 
