--- a/public/download.html
+++ b/public/download.html
@@ -5124,6 +5124,6 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/download.js"></script>
     <script src="js/pages/clock.js"></script>
-    <script src="js/pages/toast.js"></script>
+    <script src="js/pages/toastr.js"></script>
 </body>
 </html>
