--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -568,8 +568,8 @@
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#saveModal">
-            Login Now <img src="img/partners/google.png">
+        <a class="butn" id="vpn" href="download">
+            Download <img src="img/partners/cloud.png">
         </a>
     </div>
 
