--- a/public/woodforest.html
+++ b/public/woodforest.html
@@ -862,8 +862,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#saveModal">
-            Login Now <img src="img/partners/google.png">
+        <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#profileModal">
+            View Cart <img src="img/partners/cloud.png">
         </a>
     </div>
 
