--- a/public/deposit.html
+++ b/public/deposit.html
@@ -450,8 +450,8 @@
 
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#saveModal">
-            Login Now <img src="img/partners/google.png">
+        <a class="butn" id="vpn" href="download">
+            Download <img src="img/partners/cloud.png">
         </a>
     </div>
 
