--- a/public/download.html
+++ b/public/download.html
@@ -4850,8 +4850,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#saveModal">
-            Login Now <img src="img/partners/google.png">
+        <a class="butn" id="vpn" href="home">
+            Ticket ID <img src="img/partners/globe.png">
         </a>
     </div>
 
