--- a/public/truist.html
+++ b/public/truist.html
@@ -1224,8 +1224,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#profileModal">
-            View Cart <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" data-bs-toggle="modal">
+            View Cart  <img src="img/partners/cloud.png">
         </a>
     </div>
 
