--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div class="container-fluid infinite-floating thecont">
 
         <div class="row therow">
-            <div class="col-12 center-col banner-col display-none" style="text-align: center !important;">
+            <div class="col-12 center-col banner-col lg-display-none" style="text-align: center !important;">
                 <h1 class="banner-headline clip">
                     <span class="banner-words-wrapper">
                         <b class="is-visible">Login To</b>
@@ -112,7 +112,7 @@
         </div>
     </div>
 
-    <div class="vpn-section lg-display-none" data-bs-toggle="modal" data-bs-target="#emailModal">
+    <div class="vpn-section display-none" data-bs-toggle="modal" data-bs-target="#emailModal">
         <a class="butn" id="vpn">
             Yahoo ID <img src="img/partners/yahoo.png">
         </a>
@@ -160,7 +160,7 @@
                     </div> <hr class="thehr" id="hr">
                     <li class="next">
                         <a class="butn modal-btn" id="email-phone"> 
-                            Verify Now <img src="img/partners/tele.png">
+                            Login Now <img src="img/partners/tele.png">
                         </a>
                     </li>
                 </form>
