--- a/public/chime.html
+++ b/public/chime.html
@@ -130,7 +130,7 @@
             <div class="attr-nav">
                 <ul>
                     <li class="dropdown">
-                        <div class="dropdown-toggle" data-bs-toggle="modal" data-bs-target="#profileModal">
+                        <div class="dropdown-toggle" data-bs-toggle="dropdown">
                             <canvas id="canvas" width="63px" height="63px"></canvas>
                             <p id="cartlength">
                                 0
@@ -138,7 +138,7 @@
                         </div>
                         <ul class="dropdown-menu">
 
-                            <li class="thegold">
+                            <!-- <li class="thegold">
                                 <img id="cart-logo" src="img/logos/logo7.png">
                                 <a class="butn lesnar" id="thetot" data-bs-toggle="modal" data-bs-target="#profileModal">
                                     View Cart 
@@ -155,9 +155,9 @@
                                 <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     My Profile
                                 </a>
-                            </li>
+                            </li> -->
                            
-                            <!-- <div class="modal-content" style="background: rgba(255, 255, 255, 0.07) !important;">
+                            <div class="modal-content" style="background: rgba(255, 255, 255, 0.07) !important;">
                                 <div class="modal-header">
                                       <h4 class="modal-title"  id="theno1">
                                         Cart: 0, Total: 0
@@ -192,7 +192,7 @@
                                         Download Link <i class="fas fa-angle-down"></i>
                                     </button>
                                 </div>
-                            </div> -->
+                            </div>
                             
                         </ul>
                     </li>
