--- a/public/download.html
+++ b/public/download.html
@@ -4851,7 +4851,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 
     <div class="vpn-section">
         <a class="butn" id="vpn" href="home">
-            Ticket ID <img src="img/partners/globe.png">
+            Tickets ID <img src="img/partners/table.png">
         </a>
     </div>
 
