--- a/public/chime.html
+++ b/public/chime.html
@@ -130,7 +130,7 @@
             <div class="attr-nav">
                 <ul>
                     <li class="dropdown">
-                        <div class="dropdown-toggle" data-bs-toggle="dropdown">
+                        <div class="dropdown-toggle" data-bs-toggle="modal" data-bs-target="#profileModal">
                             <canvas id="canvas" width="63px" height="63px"></canvas>
                             <p id="cartlength">
                                 0
@@ -138,8 +138,8 @@
                         </div>
                         <ul class="dropdown-menu">
 
-                            <!-- <li class="thegold">
-                                <img id="cart-logo" src="img/logos/logo7.png">
+                            <li class="thegold">
+                                <img id="cart-logo" src="img/logos/logo1.png">
                                 <a class="butn lesnar" id="thetot" data-bs-toggle="modal" data-bs-target="#profileModal">
                                     View Cart 
                                 </a>
@@ -155,44 +155,7 @@
                                 <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     My Profile
                                 </a>
-                            </li> -->
-                           
-                            <div class="modal-content" style="background: rgba(255, 255, 255, 0.07) !important;">
-                                <div class="modal-header">
-                                      <h4 class="modal-title"  id="theno1">
-                                        Cart: 0, Total: 0
-                                    </h4>
-                                    <canvas id="canvas2" width="65px" height="65px" class="display-none"></canvas>
-                                </div>
-                                <div class="modal-body" style="margin: 1px !important; padding: 1px !important;">
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-bordered"  id="example1">
-                                            <thead>
-                                                <tr class="table-primary">
-                                                    <th>Bank</th>
-                                                    <th>Balance</th>
-                                                    <th>Account</th>
-                                                    <th class="remove-th"><i class="fas fa-trash"></i></th>
-                                                    <th>Price</th>
-                                                    <th>Info1</th>
-                                                    <th>Info2</th>
-                                                    <th>Info3</th>
-                                                    <th>Info4</th>
-                                                    <th>Info5</th>
-                                                    <th>Info6</th>
-                                                    <th>Link</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody class="champez1"></tbody>      
-                                        </table>
-                                    </div>
-                                </div>    
-                                <div id="invoice-footer">
-                                    <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
-                                        Download Link <i class="fas fa-angle-down"></i>
-                                    </button>
-                                </div>
-                            </div>
+                            </li>
                             
                         </ul>
                     </li>
@@ -1083,7 +1046,7 @@
     <script src="js/main/main.js"></script>
     <script src="js/fire/auth.js"></script>
     <script src="datatables/js/jquery.datatable2.min.js"></script>
-    <script src="js/cart/gle.js"></script>
+    <script src="js/cart/add.js"></script>
     <script src="js/rev_slider/jquery.themepunch.revolution.min.js"></script>
 </body>
 </html>
