--- a/public/pnc.html
+++ b/public/pnc.html
@@ -460,195 +460,91 @@
         </h4>
     </div>
     
-    <div class="infinite-floating therow portfolio-gallery">
+    <div class="infinite-floating therow owl-carousel owl-theme" id="services-carousel">
 
-    <div class="cd-time-block" 
-        data-src="img/partners/tutorial.png" 
-        data-sub-html="
-            <h4 class='wh'>
-                Intro
-            </h4>
-            <p class='wp'>
-                How to link a bank log with coinbase.
-            </p>
-        ">
-        <div class="cd-time-img cd-success">
-            <i class="fab fa-btc"></i>
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <img src="img/partners/tutorial.png" class="tutorial-img">
+                <p>
+                    How to link a bank log with coinbase.
+                </p>
+            </div>
         </div>
-        <div class="cd-time-content">
-            <img src="img/partners/tutorial.png" class="tutorial-img">
-            <p>
-                How to link a bank log with coinbase.
-            </p>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 1</h4>
+                <img src="img/coinbase/1.jpg" alt="" />
+                <p>
+                    You tap on your profile.
+                </p>
+            </div>
         </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 2</h4>
+                <img src="img/coinbase/2.jpg" alt="" />
+                <p>
+                    Select Settings
+                    <br>
+                    On the payment methods, choose "Add Payment Method"
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 3</h4>
+                <img src="img/coinbase/3.jpg" alt="" />
+                <p>
+                    Click on Bank Account since it's a local bank we are working with
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 4</h4>
+                <img src="img/coinbase/4.jpg" alt="" />
+                <p>
+                    When this prompt appears, you just click on Continue.
+                    <br>
+                    Always make sure you purchase bank logs that come with email access.
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 5</h4>
+                <img src="img/coinbase/5.jpg" alt="" />
+                <p>
+                    Now with Coinbase I recommend you use Chime or Chase Bank log that comes with email access
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 6</h4>
+                <img src="img/coinbase/6.jpg" alt="" />
+                <p>
+                    Enter the Online Access from the bank log you purchased,
+                    send verification code to email and link it instantly.
+                    You could do $5k to $20k depending on your bank limit
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Last Step</h4>
+                <img src="img/partners/good.png" class="tutorial-img">
+            </div>
+        </div>
+
     </div>
-
-    <div class="cd-time-block" 
-        data-src="img/coinbase/1.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 1
-            </h4>
-            <p class='wp'>
-                You tap on your profile.
-            </p>
-        ">
-        <div class="cd-time-img cd-success">
-            <i class="fab fa-btc"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 1</h4>
-            <img src="img/coinbase/1.jpg" alt="" />
-            <p>
-                You tap on your profile.
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/coinbase/2.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 2
-            </h4>
-            <p class='wp'>
-                Select settings <br>
-                On the payment methods, choose 'Add Payment Method'
-            </p>
-        ">
-        <div class="cd-time-img cd-success">
-            <i class="fab fa-btc"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 2</h4>
-            <img src="img/coinbase/2.jpg" alt="" />
-            <p>
-                Select Settings
-                <br>
-                On the payment methods, choose "Add Payment Method"
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/coinbase/3.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 3
-            </h4>
-            <p class='wp'>
-                Click on Bank Account since it's a local bank we are working with
-            </p>
-        ">
-        <div class="cd-time-img cd-success">
-            <i class="fab fa-btc"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 3</h4>
-            <img src="img/coinbase/3.jpg" alt="" />
-            <p>
-                Click on Bank Account since it's a local bank we are working with
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/coinbase/4.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 4
-            </h4>
-            <p class='wp'>
-                When this prompt appears, you just click on Continue.
-                <br>
-                Always make sure you purchase bank logs that come with email access.
-            </p>
-        ">
-        <div class="cd-time-img cd-success">
-            <i class="fab fa-btc"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 4</h4>
-            <img src="img/coinbase/4.jpg" alt="" />
-            <p>
-                When this prompt appears, you just click on Continue.
-                <br>
-                Always make sure you purchase bank logs that come with email access.
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/coinbase/5.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 5
-            </h4>
-            <p class='wp'>
-                Now with Coinbase I recommend you use Chime or Chase Bank log that comes with email access
-            </p>
-        ">
-        <div class="cd-time-img cd-success">
-            <i class="fab fa-btc"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 5</h4>
-            <img src="img/coinbase/5.jpg" alt="" />
-            <p>
-                Now with Coinbase I recommend you use Chime or Chase Bank log that comes with email access
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/coinbase/6.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 6
-            </h4>
-            <p class='wp'>
-                You'll enter the Online Access from the bank log you purchased,
-                send verification code to email and link it instantly
-                <br>
-                You could do $5,000 to $20,000 depending on your Bank purchase limit!!
-            </p>
-        ">
-        <div class="cd-time-img cd-success">
-            <i class="fab fa-btc"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 6</h4>
-            <img src="img/coinbase/6.jpg" alt="" />
-            <p>
-                You'll enter the Online Access from the bank log you purchased,
-                send verification code to email and link it instantly
-                <br>
-                You could do $5,000 to $20,000 depending on your Bank purchase limit!!
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/partners/good.png" 
-        data-sub-html="
-            <h4 class='wh'>
-                Last Step
-            </h4>
-            <p class='wp'>
-                Done !!! 
-                Enjoy✅✅
-            </p>
-            ">
-        <div class="cd-time-img cd-success">
-            <i class="fab fa-btc"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Last Step</h4>
-            <img src="img/partners/good.png" class="tutorial-img">
-        </div>
-    </div>
-
-</div>
 </section>
 
 
