--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -523,241 +523,107 @@
         </h4>
     </div>
     
-    <div class="infinite-floating therow portfolio-gallery">
+    <div class="infinite-floating therow owl-theme owl-carousel" id="services-carousel">
 
-    <div class="cd-time-block" 
-        data-src="img/partners/tutorial.png" 
-        data-sub-html="
-            <h4 class='wh'>
-                Intro
-            </h4>
-            <p class='wp'>
-                Wire Transfer to CashApp Tutorial
-            </p>">
-        <div class="cd-time-img">
-            <i class="fas fa-landmark"></i>
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 1</h4>
+                <img src="img/wells/1.jpg" alt="" />
+                <p>
+                    Get a bank log for wire transfer, bill pay or direct deposit. 
+                    Make sure it comes with email access.
+                </p>
+            </div>
         </div>
-        <div class="cd-time-content">
-            <img src="img/partners/tutorial.png" class="tutorial-img">
-            <p>
-                Wire Transfer to CashApp Tutorial
-            </p>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 2</h4>
+                <img src="img/wells/2.jpg" alt="" />
+                <p>
+                    Once you are logged in. Click on “Transfer & Pay” <br>
+                    Then click on “Wire Money”
+                </p>
+            </div>
         </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 3</h4>
+                <img src="img/wells/3.jpg" alt="" />
+                <p>
+                    Follow the screenshot above.
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 4</h4>
+                <img src="img/wells/4.jpg" alt="" />
+                <p>
+                    Follow the screenshot above.
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 5</h4>
+                <img src="img/wells/5.jpg" alt="" />
+                <p>
+                    Follow the screenshot above.
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 6</h4>
+                <img src="img/wells/6.jpg" alt="" />
+                <p>
+                    Enter the full details of the owner of the drop account which you are wiring the money into.
+                    Click “Continue”
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 7</h4>
+                <img src="img/wells/7.jpg" alt="" />
+                <p>
+                    - Review the details of the account the money would be wired into.
+                    Click on “Continue”
+                </p>
+            </div>
+        </div>
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Step 8</h4>
+                <img src="img/wells/8.jpg" alt="" />
+                <p>
+                    - Once adding recipient has been completed, click on “Send Wire”
+                    Wire transfers are almost immediate if send to prepaid banks👍
+                </p>
+            </div>
+        </div>
+
+
+        <div class="cd-time-block">
+            <div class="cd-time-content">
+                <h4>Last Step</h4>
+                <p> 
+                    Done !!! 
+                    Enjoy✅✅
+                </p>
+                <img src="img/partners/enjoy.png" class="tutorial-img">
+            </div>
+        </div>
+
+
     </div>
-
-    <div class="cd-time-block" 
-        data-src="img/wells/1.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 1
-            </h4>
-            <p class='wp'>
-                Before you purchase a bank log for wire transfer, bill pay or direct deposit. 
-                Make sure it comes with email access.
-            </p>
-            ">
-        <div class="cd-time-img cd-success">
-            <i class="fas fa-landmark"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 1</h4>
-            <img src="img/wells/1.jpg" alt="" />
-            <p>
-                Before you purchase a bank log for wire transfer, bill pay or direct deposit. 
-                Make sure it comes with email access.
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/wells/2.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 2
-            </h4>
-            <p class='wp'>
-                Once you are logged in. Click on “Transfer & Pay” <br>
-                Then click on “Wire Money”
-            </p>
-            ">
-        <div class="cd-time-img cd-success">
-            <i class="fas fa-landmark"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 2</h4>
-            <img src="img/wells/2.jpg" alt="" />
-            <p>
-                Once you are logged in. Click on “Transfer & Pay” <br>
-                Then click on “Wire Money”
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/wells/3.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 3
-            </h4>
-            <p class='wp'>
-                Follow the screenshot above.
-            </p>
-            ">
-        <div class="cd-time-img cd-success">
-            <i class="fas fa-landmark"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 3</h4>
-            <img src="img/wells/3.jpg" alt="" />
-            <p>
-                Follow the screenshot above.
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/wells/4.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 4
-            </h4>
-            <p class='wp'>
-                Follow the screenshot above.
-            </p>
-            ">
-        <div class="cd-time-img cd-success">
-            <i class="fas fa-landmark"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 4</h4>
-            <img src="img/wells/4.jpg" alt="" />
-            <p>
-                Follow the screenshot above.
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/wells/5.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 5
-            </h4>
-            <p class='wp'>
-                Follow the screenshot above.
-            </p>
-            ">
-        <div class="cd-time-img cd-success">
-            <i class="fas fa-landmark"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 5</h4>
-            <img src="img/wells/5.jpg" alt="" />
-            <p>
-                Follow the screenshot above.
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/wells/6.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 6
-            </h4>
-            <p class='wp'>
-                Enter the full details of the owner of the drop account which you are wiring the money into.
-                Click “Continue”
-            </p>
-            ">
-        <div class="cd-time-img cd-success">
-            <i class="fas fa-landmark"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 6</h4>
-            <img src="img/wells/6.jpg" alt="" />
-            <p>
-                Enter the full details of the owner of the drop account which you are wiring the money into.
-                Click “Continue”
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/wells/7.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 7
-            </h4>
-            <p class='wp'>
-                - Review the details of the account the money would be wired into.
-                Click on “Continue”
-            </p>
-            ">
-        <div class="cd-time-img cd-success">
-            <i class="fas fa-landmark"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 7</h4>
-            <img src="img/wells/7.jpg" alt="" />
-            <p>
-                - Review the details of the account the money would be wired into.
-                Click on “Continue”
-            </p>
-        </div>
-    </div>
-
-    <div class="cd-time-block" 
-        data-src="img/wells/8.jpg" 
-        data-sub-html="
-            <h4 class='wh'>
-                Step 8
-            </h4>
-            <p class='wp'>
-                - Once adding recipient has been completed, click on “Send Wire”
-                Wire transfers are almost immediate if send to prepaid banks👍
-            </p>
-            ">
-        <div class="cd-time-img cd-success">
-            <i class="fas fa-landmark"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Step 8</h4>
-            <img src="img/wells/8.jpg" alt="" />
-            <p>
-                - Once adding recipient has been completed, click on “Send Wire”
-                Wire transfers are almost immediate if send to prepaid banks👍
-            </p>
-        </div>
-    </div>
-
-
-    <div class="cd-time-block" 
-        data-src="img/partners/enjoy.png" 
-        data-sub-html="
-            <h4 class='wh'>
-                Last Step
-            </h4>
-            <p class='wp'>
-                Done !!! 
-                Enjoy✅✅
-            </p>
-            ">
-        <div class="cd-time-img">
-            <i class="fas fa-landmark"></i>
-        </div>
-        <div class="cd-time-content">
-            <h4>Last Step</h4>
-            <p> 
-                Done !!! 
-                Enjoy✅✅
-            </p>
-            <img src="img/partners/enjoy.png" class="tutorial-img">
-        </div>
-    </div>
-
-
-</div>
 
 </section>
 
