--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/plugins/app.min.css" />
     <link href="css/styles-7.css" rel="stylesheet" id="colors">
     <link href="css/plugins/apps.css" rel="stylesheet">   
-    <link href="css/plugins/login.css" rel="stylesheet">   
+    <link href="css/plugins/404.css" rel="stylesheet">   
 
 </head>
 <body id="thebodyz">
