--- a/public/404.html
+++ b/public/404.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#emailModal">
+        <a class="butn" id="vpn" href="index">
             Login Now <img src="img/partners/user.png">
         </a>
     </div>
