--- a/public/404.html
+++ b/public/404.html
@@ -135,7 +135,7 @@
     </div>   
 </div>
 
-    <script src="js/main/core.index.js"></script>
+    <script src="js/main/core.404.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="js/pages/login.js"></script>
